[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "0.12.6"
anyhow = "1.0.97"
base64 = "0.22.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "tokio-macros"] }
